workspace-sf/force-app/main/default/objects/DependenteBeneficiario__c/DependenteBeneficiario__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os dependentes do beneficiário.</description>
    <label>Dependente e beneficiário</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependentes e beneficiários</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>