workspace-sf/force-app/main/default/objects/DependenteBeneficiario__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dependentes e beneficiários</relationshipLabel>
    <relationshipName>DependentesBeneficiarios</relationshipName>
    <type>Lookup</type>
</CustomField>