workspace-sf/force-app/main/default/objects/DependenteBeneficiario__c/fields/GrauParentesco__c.field-meta.xml
<CustomField>
    <fullName>GrauParentesco__c</fullName>
    <label>Grau parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avô(ó)</fullName>
            </value>
            <value>
                <fullName>Bisavô(ó)</fullName>
            </value>
            <value>
                <fullName>Bisneto(a)</fullName>
            </value>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
            <value>
                <fullName>Filho(a)</fullName>
            </value>
            <value>
                <fullName>Irmão(ã)</fullName>
            </value>
            <value>
                <fullName>Mãe</fullName>
            </value>
            <value>
                <fullName>Neto(a)</fullName>
            </value>
            <value>
                <fullName>Pai</fullName>
            </value>
            <value>
                <fullName>Sogro(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>