workspace-sf/force-app/main/default/objects/DependenteBeneficiario__c/fields/PercentualParticipacao__c.field-meta.xml
<CustomField>
    <fullName>PercentualParticipacao__c</fullName>
    <label>Percentual de participação</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>