workspace-sf/force-app/main/default/objects/DependenteBeneficiario__c/fields/Proposta__c.field-meta.xml
<CustomField>
    <fullName>Proposta__c</fullName>
    <label>Proposta</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Dependentes e beneficiários</relationshipLabel>
    <relationshipName>Dependentes_e_benefici_rios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>